# ChangeLog for www-servers/apache
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-servers/apache/ChangeLog,v 1.128 2010/01/11 08:09:14 hollow Exp $

  11 Jan 2010; Benedikt Böhm <hollow@gentoo.org> -apache-2.2.11-r2.ebuild,
  metadata.xml:
  cleanup

  01 Jan 2010; Tobias Klausmann <klausman@gentoo.org>
  apache-2.2.14-r1.ebuild:
  Stable on alpha, bug #291810

  18 Dec 2009; Raúl Porcel <armin76@gentoo.org> apache-2.2.14-r1.ebuild:
  ia64/s390/sh/sprc stable wrt #291810

  18 Nov 2009; Brent Baude <ranger@gentoo.org> apache-2.2.14-r1.ebuild:
  Marking apache-2.2.14-r1 ppc64 for bug 291810

  11 Nov 2009; Jeroen Roovers <jer@gentoo.org> apache-2.2.14-r1.ebuild:
  Stable for HPPA (bug #291810).

  08 Nov 2009; nixnut <nixnut@gentoo.org> apache-2.2.14-r1.ebuild:
  ppc stable #291810

  04 Nov 2009; Markus Meier <maekke@gentoo.org> apache-2.2.14-r1.ebuild:
  amd64/arm/x86 stable, bug #291810

  04 Nov 2009; Benedikt Böhm <hollow@gentoo.org> -apache-2.2.13.ebuild,
  -apache-2.2.13-r1.ebuild, -apache-2.2.14.ebuild:
  remove old versions

*apache-2.2.14-r1 (08 Oct 2009)

  08 Oct 2009; Benedikt Böhm <hollow@gentoo.org> +apache-2.2.14-r1.ebuild:
  update peruser patch to 0.4.0b1

*apache-2.2.14 (06 Oct 2009)

  06 Oct 2009; Benedikt Böhm <hollow@gentoo.org> +apache-2.2.14.ebuild:
  version bump wrt #283729

*apache-2.2.13-r1 (20 Sep 2009)

  20 Sep 2009; Benedikt Böhm <hollow@gentoo.org> apache-2.2.11-r2.ebuild,
  -apache-2.2.11-r3.ebuild, -apache-2.2.12.ebuild, apache-2.2.13.ebuild,
  +apache-2.2.13-r1.ebuild:
  fix #285449, #277297 and #277298; convert to EAPI2

*apache-2.2.13 (26 Aug 2009)

  26 Aug 2009; Benedikt Böhm <hollow@gentoo.org> +apache-2.2.13.ebuild:
  version bump

*apache-2.2.12 (29 Jul 2009)

  29 Jul 2009; Benedikt Böhm <hollow@gentoo.org> +apache-2.2.12.ebuild:
  version bump

*apache-2.2.11-r3 (24 Jul 2009)

  24 Jul 2009; Benedikt Böhm <hollow@gentoo.org> -apache-2.2.10.ebuild,