@@ -1,6 +1,9 @@
 AUX apache-2.2.14-r1-prefix.patch 21291 RMD160 79970c9da606d91cc78698568d81f7950b4cea97 SHA1 77ed93e480cb1131dfe38450d4016f94f7e70aa4 SHA256 f056d715972387c9fddefaff58a4ddd0bffb419fb0b376000899f27dd9a06e40
 DIST gentoo-apache-2.2.14-r1-20091008.tar.bz2 62359 RMD160 0e78de9a61265be2ef797e02bce0cf89f0a5fd2a SHA1 357316581f7d7d289655992216be6c5f5342f32c SHA256 99db378884b33af1c97713f63d92f0bb1d02eef6dc1f8f47a9addd258b3f7233
+DIST gentoo-apache-2.2.15-20100307.tar.bz2 63716 RMD160 aa16c46ec930c020820293b884876946b81bd476 SHA1 20fa102d6094d00d3c874b0b1df69d0ddcf34339 SHA256 b3c4ca6eed24ea82ff37bfa331403b09c94f3b2a8b5b1058761651c6824787c1
 DIST httpd-2.2.14.tar.bz2 5147171 RMD160 ff5077e444ba995475202bb3b9be733384c809d1 SHA1 eacd04c87b489231ae708c84a77dc8e9ee176fd2 SHA256 b2deab8a5e797fde7a04fb4a5ebfa9c80f767d064dd19dcd2857c94838ae3ac6
+DIST httpd-2.2.15.tar.bz2 4959582 RMD160 e5c5da1fdf86a6b0501f6c8e97ccb1982e81cfdf SHA1 5f0e973839ed2e38a4d03adba109ef5ce3381bc2 SHA256 5ae0c428e7abd87eecbac8564d90a7182104325bae7086c21db7b3a1e3140ca7
 EBUILD apache-2.2.14-r1.ebuild 2319 RMD160 1c938c965135dd7d2fddaf56bec5af435af4dbdb SHA1 186b4bd4e83c6aaedef4081fef993adb36f5ee0a SHA256 02edb3a89989b3e444f85fc6d5fbe5a0fcf1f1153150709d950e09166856f567
-MISC ChangeLog 109883 RMD160 23819c34b780527ef2abcb45b45a29721f9d7ad6 SHA1 36877b0a675eebd6e6e75b9e531c2572bf9eb11f SHA256 9d1141943bfa01b7e67776f2161ac91d7da2b83cd306de7f763aaa7d79d4f176
+EBUILD apache-2.2.15.ebuild 2368 RMD160 3b1c2a4aabef7613cf49a3c902220bb994785cb5 SHA1 a2a236f40e436d1648007c5feed5922751f4edf5 SHA256 780080a546fb79961443f73bd5c9cb2f8f969a0051912b98d3b68257bfe11eba
+MISC ChangeLog 110153 RMD160 87b5a6aa3f048b932641284b633fee4d0e2a4087 SHA1 4f9a161f3d12e99a219531679698e8aa251543a4 SHA256 feb544089b0b7f3f0e57b38430c2ad87b6540358b408dcc522e41ee3df9cbca9
 MISC metadata.xml 622 RMD160 217aba625932dbcfcb8bcee1f8a38e6f248e65a7 SHA1 1e7494fe8e49166c8b87a178aca78c9a658f92c7 SHA256 eb6d4f305a170e97bf29e5c6e9d1df6edea8fcdabd35ac2d99ebc8fe5bbd71b4
