@@ -1,6 +1,14 @@
 # ChangeLog for www-servers/apache
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/apache/ChangeLog,v 1.128 2010/01/11 08:09:14 hollow Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-servers/apache/ChangeLog,v 1.130 2010/03/07 16:20:22 hollow Exp $
+
+  07 Mar 2010; Benedikt Böhm <hollow@gentoo.org> apache-2.2.15.ebuild:
+  fix openssl DEPEND wrt #308049
+
+*apache-2.2.15 (07 Mar 2010)
+
+  07 Mar 2010; Benedikt Böhm <hollow@gentoo.org> +apache-2.2.15.ebuild:
+  version bump. fixes #293783, #294098, #295916 and #308049
 
   11 Jan 2010; Benedikt Böhm <hollow@gentoo.org> -apache-2.2.11-r2.ebuild,
   metadata.xml:
